--- a/style.css
+++ b/style.css
@@ -111,3 +111,16 @@ main {
     max-width: 60%;
     text-align: center;
 }
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: #56AD52;
+}
+
+
+footer img {
+    width: 100%;
+}
