feat: add media query for hi-res for main content

--- a/style.css
+++ b/style.css
@@ -153,13 +153,16 @@ a {
 @media screen and (min-width: 600px){
     header {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: auto 1fr;
     }
     .header__img-container{
         grid-column: 1;
+        grid-row: 1 / 3;
+        margin: -20px 0 0 -20px;
     }
 
     .header__about-me-box {
+        grid-column: 2;
         padding: 0;
         width: 100%;
     }
@@ -170,6 +173,59 @@ a {
 
     .main__card-container{
         grid-template-columns: 1fr 1fr;
+
+    }
+
+    .main__card-title {
+        font-size: 1.5rem;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        font-size: 1.5rem;
+    }
+    .footer_title {
+        grid-column: 1/2;
+    }
+
+    .footer__img {
+        max-width: 100%;
+        height: auto;
+        grid-row: 1 / 3;
+        grid-column: 2;
+    }
+    
+    .footer__link-buttons {
+        font-size: 4rem;
+        align-self: flex-start;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    header {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
+    .header__img-container{
+        grid-column: 1;
+        grid-row: 1 / 3;
+        margin: -20px 0 0 -20px;
+    }
+
+    .header__about-me-box {
+        grid-column: 2;
+        padding: 0;
+        width: 100%;
+    }
+
+    .header__name {
+        transform: translateX(-50%) translateY(70%);
+    }
+
+    .main__card-container{
+        grid-template-columns: repeat(3, 1fr);
 
     }
 
