--- a/style.css
+++ b/style.css
@@ -211,17 +211,30 @@ a {
     .header__img-container{
         grid-column: 1;
         grid-row: 1 / 3;
-        margin: -20px 0 0 -20px;
+        margin: 0 20px;
     }
 
     .header__about-me-box {
         grid-column: 2;
+        grid-row: 1/3;
         padding: 0;
-        width: 100%;
+        font-size: 2rem;
+        width: auto;
+        margin-right: 60px;
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
     }
 
     .header__name {
         transform: translateX(-50%) translateY(70%);
+    }
+    
+    .header__link-buttons {
+        font-size: 4rem;
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
     }
 
     .main__card-container{
@@ -237,7 +250,7 @@ a {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     .footer_title {
         grid-column: 1/2;
