--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ a {
         grid-template-rows: repeat(3, 1fr);
         font-size: 1.5rem;
     }
-    .footer_title {
+    .footer__title {
         grid-column: 1/2;
     }
 
@@ -248,23 +248,35 @@ a {
 
     footer {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
         font-size: 2rem;
+        align-items: center;
     }
-    .footer_title {
-        grid-column: 1/2;
+    .footer__title {
+        grid-column: 1/3;
+        font-size: 6rem;
+    }
+
+    .footer__contact-intro {
+        grid-row: 2;
+    }
+
+    .footer__contact-info {
+        grid-row: 3;
     }
 
     .footer__img {
-        max-width: 100%;
+        max-width: 70%;
         height: auto;
-        grid-row: 1 / 3;
+        grid-row: 2 / 5;
         grid-column: 2;
+        justify-self: center;
     }
     
     .footer__link-buttons {
         font-size: 4rem;
-        align-self: flex-start;
+        grid-row: 4;
+        align-self: center;
     }
 }
